# A-Benchmarking-Platform-for-Atomic-Learned-Indexes

./: .gitignore  README.md
mdls/json/: NN0.json  NN2.json  NN3.json
res/uniform/: predictionTime.csv  trainingTime.csv  trainingTimeNN1.csv  trainingTimeNN2.csv  trainingTimeNN3.csv
res/uniform/ckpt_models/: best_model.h5py.data-00000-of-00001  best_model.h5py.index
res/uniform/ckpt_models/NN0/: best_model.h5py.data-00000-of-00001  best_model.h5py.index
res/uniform/ckpt_models/NN1/: best_model.h5py.data-00000-of-00001  (+1 more)
res/uniform/logs/: events.out.tfevents.1568630952.dma  events.out.tfevents.1568631203.dma  events.out.tfevents.1568631645.dma
rsc/uniform/: uni01.sorted.bin.h5  uni01.sorted.bin2.h5  uni01.sorted.csv  uni01.sorted.h5
src/: queryTensorflow.py  trainNN.py
src/BPtree/: README.txt
src/BPtree/stx/: btree_multimap  btree_set.h
src/CSS/: CMakeLists.txt  mainCSS8192.cpp  utils.h
src/CSS/stx/: btree  btree.dox  btree.h  btree_map  btree_multiset  btree_multiset.h  btree_set
src/Data_Structures/BPtree/: CMakeLists.txt  README.md  mainBtree256.cpp  mainBtree8192.cpp
src/Data_Structures/BPtree/stx/: btree_map.h
src/Data_Structures/CSS/: README.md  csstree.h  mainCSS256.cpp
src/Data_Structures/Paco-Lcp/: README.md
src/Data_Structures/SABT/: README.md  SplayTree.java
src/Neural_Nets/: README.md  cpuPredictionTime.csv  createBinArray.py  queryCPU.cpp  queryCudaGPU.cu  queryTensorflow.py  trainNN.py
src/Neural_Nets/lib/: nn.h  util.h
src/Neural_Nets/mdls/: params.json
src/Paco-Lcp/lcp/: LCP.java  LcpDataStructure.java
(+60 files in other folders)
